--- a/package.json
+++ b/package.json
@@ -15,22 +15,21 @@
     "@babel/preset-env": "^7.8.7",
     "@rollup/plugin-commonjs": "^11.0.2",
     "@rollup/plugin-node-resolve": "^7.1.1",
-    "@rollup/plugin-typescript": "^4.0.0",
-    "axios": "^0.19.2",
-    "js-file-download": "^0.4.10",
     "npm-run-all": "^4.1.5",
     "rimraf": "^3.0.2",
     "rollup": "^2.0.0",
     "rollup-plugin-babel": "^4.3.3",
     "standard-version": "^7.1.0",
     "tslib": "^1.11.1",
-    "typescript": "^3.8.3",
-    "vue": "^2.6.11"
+    "typescript": "^3.8.3"
   },
   "scripts": {
     "clean": "rimraf dist",
-    "build": "rollup -c rollup.config.js",
+    "prebuild": "run-s clean",
+    "build:tsc": "tsc",
+    "build:bundle": "rollup -c rollup.config.js",
+    "build": "run-s build:tsc build:bundle",
     "release": "standard-version",
-    "prepare": "run-s clean build"
+    "prepare": "run-s build"
   }
 }
