--- a/package.json
+++ b/package.json
@@ -4,8 +4,9 @@
   "description": "Authentication handler for nuxt",
   "repository": "https://github.com/rhangai/web-auth.git",
   "author": "rhangai <hangai.renan@gmail.com>",
-  "main": "dist/index.js",
-  "types": "index.d.ts",
+  "module": "dist/index.js",
+  "main": "dist/index.umd.js",
+  "types": "dist/index.d.ts",
   "license": "MIT",
   "browserslist": "> 0.25%, not dead, ie >= 11",
   "dependencies": {},
