--- a/package.json
+++ b/package.json
@@ -4,9 +4,9 @@
   "description": "Authentication handler for nuxt",
   "repository": "https://github.com/rhangai/web-auth.git",
   "author": "rhangai <hangai.renan@gmail.com>",
-  "module": "dist/index.js",
-  "main": "dist/index.umd.js",
-  "types": "dist/index.d.ts",
+  "module": "lib/index.js",
+  "main": "lib/index.umd.js",
+  "types": "lib/index.d.ts",
   "license": "MIT",
   "browserslist": "> 0.25%, not dead, ie >= 11",
   "dependencies": {},
@@ -25,7 +25,7 @@
     "typescript": "^3.8.3"
   },
   "scripts": {
-    "clean": "rimraf dist",
+    "clean": "rimraf lib",
     "prebuild": "run-s clean",
     "build:tsc": "tsc",
     "build:bundle": "rollup -c rollup.config.js",
