--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@babel/core": "^7.8.7",
     "@babel/plugin-transform-runtime": "^7.8.3",
     "@babel/preset-env": "^7.8.7",
+    "@nuxt/types": "^0.6.4",
     "@rollup/plugin-commonjs": "^11.0.2",
     "@rollup/plugin-node-resolve": "^7.1.1",
     "npm-run-all": "^4.1.5",
@@ -22,7 +23,8 @@
     "rollup-plugin-babel": "^4.3.3",
     "standard-version": "^7.1.0",
     "tslib": "^1.11.1",
-    "typescript": "^3.8.3"
+    "typescript": "^3.8.3",
+    "vue": "^2.6.11"
   },
   "scripts": {
     "clean": "rimraf lib",
@@ -31,6 +33,6 @@
     "build:bundle": "rollup -c rollup.config.js",
     "build": "run-s build:tsc build:bundle",
     "release": "standard-version",
-    "prepare": "run-s build"
+    "prepack": "run-s build"
   }
 }
