chore: Updated implementation

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -6,8 +6,7 @@
 		"lib": ["es2018", "dom"],
 		"rootDir": "src",
 		"strict": true,
-		"declaration": true,
-		"outDir": "lib"
+		"types": ["@types/jest"]
 	},
 	"include": ["src"]
 }
