--- a/package.json
+++ b/package.json
@@ -17,11 +17,15 @@
     "@nuxt/types": "^0.6.4",
     "@rollup/plugin-commonjs": "^11.0.2",
     "@rollup/plugin-node-resolve": "^7.1.1",
+    "@types/jest": "^25.1.4",
+    "jest": "^25.1.0",
     "npm-run-all": "^4.1.5",
     "rimraf": "^3.0.2",
     "rollup": "^2.0.0",
     "rollup-plugin-babel": "^4.3.3",
+    "rxjs": "^6.5.4",
     "standard-version": "^7.1.0",
+    "ts-jest": "^25.2.1",
     "tslib": "^1.11.1",
     "typescript": "^3.8.3",
     "vue": "^2.6.11"
@@ -33,6 +37,7 @@
     "build:bundle": "rollup -c rollup.config.js",
     "build": "run-s build:tsc build:bundle",
     "release": "standard-version",
-    "prepack": "run-s build"
+    "prepack": "run-s build",
+    "test": "jest"
   }
 }
