--- a/.prettierrc
+++ b/.prettierrc
@@ -2,6 +2,7 @@
 	"useTabs": true,
 	"tabWidth": 4,
 	"printWidth": 100,
+	"trailingComma": "es5",
 	"overrides": [
 		{
 			"files": ["package.json"],
