--- a/tsconfig.json
+++ b/tsconfig.json
@@ -6,7 +6,7 @@
 		"lib": ["es2018", "dom"],
 		"rootDir": "src",
 		"strict": true,
-		"declaration": true,
+		"esModuleInterop": true,
 		"types": ["@types/jest"]
 	}
 }
